Fix spacing

--- a/src/pages/Root.module.css
+++ b/src/pages/Root.module.css
@@ -1,6 +1,7 @@
 .root {
   position: relative;
   min-height: 100vh;
+  padding-bottom: var(--space-m);
 }
 
 .container {
@@ -28,8 +29,10 @@
 
 .root > p {
   position: absolute;
+  left: var(--space-xs);
   bottom: var(--space-xs);
   right: var(--space-xs);
+  text-align: right;
 }
 
 .visible {
